--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "formik": "^2.2.9",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "prettier": "^2.8.1",
+    "sass": "^1.57.1"
   }
 }
