--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/lodash": "^4.14.191",
+    "@types/numeral": "^2.0.2",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "^2.8.1",
     "sass": "^1.57.1"
