--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "lodash": "^4.17.21",
     "next": "13.1.1",
     "numeral": "^2.0.6",
+    "ow": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
